# microsoft_graph_mcp_server

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  check_recoverable.py  debug_html_cleaning.py  pyproject.toml  reinstall.bat  reinstall.sh  requirements.txt  setup.py  test_last_day.py  test_load_emails.py  test_mcp.txt  verify_setup.py
.ica_v2/mcpServers/: microsoft-graph.yaml
.iflow/: settings.json
doc/: CALENDAR.md  CALENDAR_AVAILABILITY.md  CONTRIBUTING.md  EMAIL_FUNCTIONS.md  EMAIL_SORTING.md  ERROR_CODES.md  FOLDER_EMAIL_DELETION.md  INLINE_ATTACHMENTS.md  INSTALLATION.md  LOGIN_DOCUMENTATION.md  QUICK_START.md  RATE_LIMITING.md  SETUP.md  SYSTEM_PROMPT.md  TEST_README.md  TIMEZONE_HANDLING.md  TOOL_DEPENDENCIES.md  UVX_CONFIG_EXAMPLES.md  UVX_USAGE.md  VALIDATION.md
examples/: __init__.py  auth_workflow.py  calendar_workflow.py  email_workflow.py  template_workflow.py
microsoft_graph_mcp_server/: __init__.py  __main__.py  auth.py  config.py  date_handler.py  email_cache.py  event_cache.py  graph_client.py  main.py  server.py  template_cache.py
microsoft_graph_mcp_server/auth_modules/: __init__.py  auth_manager.py  device_flow.py  token_manager.py
microsoft_graph_mcp_server/cache/: __init__.py  email_cache.py  event_cache.py
microsoft_graph_mcp_server/clients/: __init__.py  base_client.py  calendar_client.py  email_client.py  file_client.py  teams_client.py  user_client.py
microsoft_graph_mcp_server/handlers/: __init__.py  auth_handlers.py  base.py  calendar_handlers.py  email_handlers.py  file_handlers.py  teams_handlers.py  user_handlers.py
microsoft_graph_mcp_server/tools/: __init__.py  registry.py
microsoft_graph_mcp_server/utils/: __init__.py  csv_utils.py  date_handler.py  html_utils.py  image_utils.py
microsoft_graph_mcp_server/validation/: __init__.py  common.py
tests/: HOW_TO_TEST.md  RUN_TEST.md  TEST_LOGIN_GUIDE.md  __init__.py  check_deleted.py  check_recoverable.py  list_all_folders.py  minimal_test.py  quick_test.bat  quick_test.ps1  run-test.bat  run_test.bat  run_test.ps1  run_with_logging.bat  test_email_functions_unit.py  test_event_cache.py  test_invite.py  test_logging.py  test_login_complete.py  test_login_status.py  test_manage_event.py  test_mcp_init.py  test_mcp_server.py  test_move_all_emails_safe.py  test_new_email_functions.py  test_performance.py  test_reply_fix.py  test_respond_to_event.py  test_search_performance.py  test_server_methods.py  test_server_run.py  test_simple_import.py  test_template_cache.py  test_user_settings.py  test_uvx_logging.py  verify_setup.py
tests/auth/: quick_device_flow_test.py  simple_device_test.py  test_login_complete.py
tests/calendar/: test_event_cache.py  test_manage_my_event.py  test_respond_to_event.py
tests/email/: test_move_all_emails_safe.py  test_search_filtering.py
tests/general/: test_dispatch_table.py  test_performance.py  test_template_cache.py  test_user_settings.py
tests/validation/: test_validation.py
